--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
 body {
-  background: black;
-  color: white;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root{ 
+  --color--bg: #6c8399;
+  --color--bg-variant: rgb(116, 176, 198) ;
+  --color--primary: #1ff ;
+  --color--primary-variant: rgb(128, 223, 239);
+  --color--white: #fff;
+  --color--light: rgb(255, 255, 255, 0.6);
 }
