--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,26 @@ img {
   width: 100%;
   object-fit: cover;
 }
+
+/* Media Queries for medium devices*/
+@media screen and (max-width: 1024px){
+  .container{
+  width: var(--container-width-md);
+  }
+
+  section{
+    margin-top: 6rem;
+  }
+}
+
+/* Media Queries for small devices*/
+@media screen and (max-width: 600px){
+  .container{
+  width: var(--container-width-sm);
+  }
+
+  section > h2{
+    margin-bottom: 2rem;
+  }
+}
+
