Created floating nav component, styled with css and managed states using useState hook

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,6 @@ header {
 }
 
 /*  CTA  */
-
 .cta {
     margin-top: 2.5rem;
     display: flex;
@@ -19,8 +18,8 @@ header {
     justify-content: center;
 }
 
-/*  Socials  */
-.header__socials {
+/*  Header Socials  */
+.headerSocials {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,22 +28,20 @@ header {
     left: 0;
     bottom: 3rem;
 }
-
-.header__socials::after {
+ 
+.headerSocials::after {
     content: "";
     width: 1px;
     height: 2rem;
     background: var(--color-primary);
 }
- 
 /* image */
-
 .me {
     background: linear-gradient(var(--color-primary), transparent);
     height: 30rem;
     width: 22rem;
     position: absolute;
-    left: calc(50% - 11rem);
+    left: calc(50% - 12.25rem);
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
@@ -73,7 +70,7 @@ header {
     header {
         height: 100vh;
     }
-    .header__socials, 
+    .headerSocials, 
     .scroll__down {
         display: none;
     }
