--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,11 @@ h1 {
 
 section {
   margin-top: 8rem;
+  height: 100vh
 }
 
-section > h2, section > h3 {
+section > h2, 
+section > h3 {
   text-align: center;
   color: var(--color-light);
 }
