--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,5 @@
 header {
-    height: 100vh;
-    padding-top: 7rem;
-    overflow: hidden;
+    padding-top: 1rem;
 }
 
 .header__container {
@@ -10,12 +8,17 @@ header {
     position: relative;
 }
 
+.header__container h1, h4 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 /*  CTA  */
 .cta {
-    margin-top: 2.5rem;
     display: flex;
     gap: 1.2rem;
     justify-content: center;
+    margin-top: 2rem;
 }
 
 /*  Header Socials  */
@@ -27,6 +30,7 @@ header {
     position: absolute;
     left: 0;
     bottom: 3rem;
+    font-size: 1.25rem;
 }
  
 .headerSocials::after {
@@ -36,16 +40,34 @@ header {
     background: var(--color-primary);
 }
 /* image */
-.me {
-    background: linear-gradient(var(--color-primary), transparent);
-    height: 30rem;
-    width: 22rem;
-    position: absolute;
-    left: calc(50% - 12.25rem);
+.me__background {
+    height: 23rem;
+    width: 23rem;
+    aspect-ratio: 1/1;
+    border-radius: 2rem;
+    background: linear-gradient(
+        30deg,
+        transparent,
+        var(--color-primary),
+        transparent
+    );
+    display: grid;
+    place-items: center;
+    margin: 0 auto;
     margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
+}
+
+.me__image {
+    width: 23rem;
+    height: 23rem;
+    border-radius: 2rem;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    transform: rotate(10deg);
+    transition: var(transition);
+}
+
+.me__image:hover {
+    transform: rotate(0deg);
 }
 
 /* Scroll Down */
@@ -63,15 +85,28 @@ header {
     header {
         height: 68vh;
     }
-}
-
-/* Media Queries for small devices*/
-@media screen and (max-width: 600px){
-    header {
-        height: 100vh;
-    }
-    .headerSocials, 
     .scroll__down {
         display: none;
     }
+    .me__image {
+        width: 15rem;
+        height: 15rem;
+    }
+    .me__background {
+        height: 20rem;
+        width: 20rem;
+    }
+}
+
+/* Media Queries for small devices*/
+@media screen and (max-width: 600px){ 
+    .scroll__down {
+        display: none;
+    }
+    .me__image {
+        width: 10rem;
+        height: 10rem;
+    }
+    
+
 }
