Created the experience  component and styled with css

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -73,8 +73,9 @@
 /* Media Queries for small devices*/
 @media screen and (max-width: 600px){
     .about__me {
-        width: 65%;
+        width: 40%;
         margin: 0 auto 3rem;
+        margin-top: 1rem;
     }
 
     .about__cards{
