--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,10 @@
+section > h2 {
+    margin-bottom: 1rem;
+  }
+
 .about__container { 
     display: grid;
-    grid-template-columns: 45% 55%;
+    grid-template-columns: 30% 70%;
 }
 
 .about__me {
@@ -11,20 +15,21 @@
     border-radius: 10rem 10rem 0 0;
     overflow: hidden;
     padding: 1.5rem 1.5rem 1.5rem 1.5rem;
-    margin-top: -2rem;
+    margin-top: 10rem;
 }
 
 .about__cards {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
+    grid-template-columns: repeat(3, 4fr);
+    gap: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .about__card {
     background: var(--color-bg-variant);
     border: 1px solid transparent;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 1.5rem;
     text-align: center;
     transition: var(--transition);
 }
@@ -38,11 +43,13 @@
 .about__icon {
     color: var(--color-primary);
     font-size: 1.4rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .about__card h5 {
     font-size: 0.95rem;
+    text-align: left;
+    color: #CDCDCD;
 }
 
 .about__card small {
