--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,16 @@
 header {
     padding-top: 1rem;
+    place-items: center;
 }
 
 .header__container {
-    text-align: center;
-    height: 100%;
-    position: relative;
+    margin: 0 auto;
 }
 
 .header__container h1, h4 {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 /*  CTA  */
@@ -21,24 +21,6 @@ header {
     margin-top: 2rem;
 }
 
-/*  Header Socials  */
-.headerSocials {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-    font-size: 1.25rem;
-}
- 
-.headerSocials::after {
-    content: "";
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
-}
 /* image */
 .me__background {
     height: 23rem;
@@ -64,29 +46,25 @@ header {
     overflow: hidden;
     transform: rotate(10deg);
     transition: var(transition);
+    
 }
 
 .me__image:hover {
     transform: rotate(0deg);
 }
 
-/* Scroll Down */
-.scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 3rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
+img {
+    position: relative;
+    top: -1.9rem;
+   
 }
+
+
 
 /* Media Queries for medium devices*/
 @media screen and (max-width: 1024px){
     header {
         height: 68vh;
-    }
-    .scroll__down {
-        display: none;
     }
     .me__image {
         width: 15rem;
@@ -100,9 +78,6 @@ header {
 
 /* Media Queries for small devices*/
 @media screen and (max-width: 600px){ 
-    .scroll__down {
-        display: none;
-    }
     .me__image {
         width: 10rem;
         height: 10rem;
