--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -19,6 +19,7 @@ nav a {
     padding: 0.9rem;
     border-radius: 50%;
     display: flex;
+    color: var(--color-light);
     font-size: 1.25rem;
 }
 
@@ -27,5 +28,6 @@ nav a:hover {
 }
 
 nav a.active {
-    background: var(--color-bg);
+    background: var(--color-primary);
+    color: var(--color-bg);
 }
