--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -70,7 +70,7 @@ section > h2 {
     }
     .about__me {
         width: 50%;
-        margin: 2rem auto 4rem;
+        margin: 2rem auto;
     }
     .about__content p {
         margin: 1rem 0 1.5rem;
@@ -81,7 +81,7 @@ section > h2 {
 @media screen and (max-width: 600px){
     .about__me {
         width: 40%;
-        margin: 0 auto 3rem;
+        margin: 0 auto;
         margin-top: 1rem;
     }
 
