Configure React app for deployment to GitHub Pages

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,6 +2,10 @@ section > h2 {
     margin-bottom: 1rem;
   }
 
+section > h3 {
+    margin-top: 1rem;
+  }
+
 .about__container { 
     display: grid;
     grid-template-columns: 30% 70%;
